[gd_scene format=3 uid="uid://cdll1fgjhg4qo"]

[ext_resource type="Script" uid="uid://ctsvm15dv038b" path="res://scripts/mainnmenu.gd" id="1_uxvcs"]
[ext_resource type="FontFile" uid="uid://c0im8hsey1aa4" path="res://assets/PixelifySans-Bold.ttf" id="2_d8ejm"]
[ext_resource type="Texture2D" uid="uid://c28f11wxipbai" path="res://assets/background.png" id="3_am31m"]
[ext_resource type="FontFile" uid="uid://cgtsjkccqjl0h" path="res://assets/PixelifySans-Regular.ttf" id="4_po0ld"]
[ext_resource type="AudioStream" uid="uid://b01fau2lyyjsj" path="res://assets/mainmenunew.wav" id="5_wmsxl"]
[ext_resource type="Script" uid="uid://bjvbyqnuj0xmx" path="res://scripts/entities/PlayerMainMenu.gd" id="6_vbxid"]
[ext_resource type="Texture2D" uid="uid://dnm3cowsiyvey" path="res://assets/gorgeous.png" id="7_cenvs"]
[ext_resource type="Script" uid="uid://b1b838dtpkty8" path="res://scripts/core/GridManager.gd" id="8_4oewu"]

[node name="MainMenu" type="Control" unique_id=1050467227]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_uxvcs")

[node name="Black" type="ColorRect" parent="." unique_id=951688467]
layout_mode = 0
offset_right = 1944.0
offset_bottom = 1092.0
color = Color(0, 0, 0, 1)

[node name="Loading" type="Label" parent="Black" unique_id=403724561]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 234.0
offset_top = 355.0
offset_right = 1775.0
offset_bottom = 572.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_d8ejm")
theme_override_font_sizes/font_size = 180
text = "LOADING..."
horizontal_alignment = 1

[node name="Background" type="TextureRect" parent="." unique_id=955506735]
layout_mode = 0
offset_left = -45.0
offset_top = -145.0
offset_right = 2150.0
offset_bottom = 1250.0
texture = ExtResource("3_am31m")
expand_mode = 1
stretch_mode = 4

[node name="FadeLayer" type="ColorRect" parent="." unique_id=393215701]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 1944.0
offset_bottom = 1092.0

[node name="MaskOverlay" type="TextureRect" parent="." unique_id=716045987]
unique_name_in_owner = true
layout_mode = 0
offset_right = 1942.0
offset_bottom = 1078.0

[node name="UI_Layer" type="MarginContainer" parent="." unique_id=1626978155]
layout_mode = 0
offset_left = 203.0
offset_top = 226.0
offset_right = 1744.0
offset_bottom = 883.0

[node name="MenuBox" type="Node2D" parent="UI_Layer" unique_id=1840484986]
unique_name_in_owner = true

[node name="TitleLabel" type="Label" parent="UI_Layer/MenuBox" unique_id=1058150304]
offset_left = 155.0
offset_top = 79.0
offset_right = 1390.0
offset_bottom = 189.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_d8ejm")
theme_override_font_sizes/font_size = 60
text = "YOU HAVE COMPLETED"
horizontal_alignment = 1

[node name="TitleLabel2" type="Label" parent="UI_Layer/MenuBox" unique_id=2122587757]
offset_left = -43.0
offset_top = 114.0
offset_right = 1498.0
offset_bottom = 279.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_d8ejm")
theme_override_font_sizes/font_size = 180
text = " DAMASKUS"
horizontal_alignment = 1

[node name="Btn_Start" type="Button" parent="UI_Layer/MenuBox" unique_id=564618523]
unique_name_in_owner = true
offset_left = 503.0
offset_top = 394.0
offset_right = 1035.0
offset_bottom = 581.0
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("4_po0ld")
theme_override_font_sizes/font_size = 100
text = "PLAY AGAIN"
flat = true

[node name="Btn_Quit" type="Button" parent="UI_Layer/MenuBox" unique_id=627072692]
unique_name_in_owner = true
offset_left = 1169.0
offset_top = 669.0
offset_right = 1665.0
offset_bottom = 833.0
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("4_po0ld")
theme_override_font_sizes/font_size = 40
text = "QUIT"
flat = true

[node name="Btn_Options" type="Button" parent="UI_Layer/MenuBox" unique_id=1263669460]
unique_name_in_owner = true
visible = false
offset_left = -168.0
offset_top = 662.0
offset_right = 251.0
offset_bottom = 814.0
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("4_po0ld")
theme_override_font_sizes/font_size = 40
text = "OPTIONS"
flat = true

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="." unique_id=1153583541]
stream = ExtResource("5_wmsxl")
autoplay = true

[node name="Player2" type="CharacterBody2D" parent="." unique_id=906236154]
position = Vector2(352, 352)
scale = Vector2(0.3, 0.3)
script = ExtResource("6_vbxid")

[node name="Sprite" type="Sprite2D" parent="Player2" unique_id=1341756427]
position = Vector2(-69.99999, -299.99994)
scale = Vector2(1.7, 1.8666669)
texture = ExtResource("7_cenvs")

[node name="Label" type="Label" parent="Player2" unique_id=1005981589]
visible = false
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
text = "NULL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridManager" type="Node" parent="." unique_id=897976182]
script = ExtResource("8_4oewu")
